--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=receipt-service
+
+# JSON serialization settings
+spring.jackson.serialization.indent_output=true
+
+# Server port
+server.port=8080
